# url_shorting

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
config/: domains.yaml
migrations/versions/: 269c17ff5c79_.py  57a68be40427_.py
url_short/: .envexample  __init__.py  config.py
url_short/models/: __init__.py  models.py
url_short/services/: shorting_service.py
